fix: overlapping edges of picture.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -475,6 +475,8 @@ hr {
 .error-picture {
     height: 100%;
     border-radius: 0rem 0 1rem 1rem;
+    padding: 1rem;
+    border-radius: 40px;
 }
 
 /*=============== Post List ===============*/
